Sun Dec 23 23:02:17 2001  Carlos O'Ryan  <coryan@uci.edu>

	* examples/QOS/Diffserv/Diffserv.dsw:
	* examples/QOS/Diffserv/diffserv_test.dsp:
	* examples/QOS/Diffserv/server.dsp:
	* examples/Reactor/FIFO/FIFO.dsw:
	* examples/Reactor/FIFO/client.dsp:
	* examples/Reactor/FIFO/server.dsp:
	* examples/Shared_Memory/Shared_Memory.dsw:
	* examples/Shared_Memory/test_MM.dsp:
	* examples/Shared_Memory/test_SV.dsp:
	  Add more missing project files and workspaces.

Mon Dec 24 00:48:34 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/tests.dsw:
	* tests/Get_Opt_Test.dsp: Added this new project file.

Sun Dec 23 12:25:55 2001  Don Hinton  <dhinton@gmx.net>

 	* ace/Logging_Strategy.cpp
 	* ace/Naming_Context.cpp
 	* ace/Sercive_Config.cpp
 	* ace/Service_Manager.cpp
 	* ace/Get_Opt{h,i,cpp}:

 	Added long option support to ACE_Get_Opt that closely minimics
 	getopt_long(3c) functionality as follows: made all member
 	variables private; added accessor functions and macros wrappers to
 	transparently provide backward compatibility; added new function,
 	long_option(), that can be used to add long options with/without
 	corresponding short options.

 	* tests/Makefile
 	* tests/Makefile.bor
 	* tests/run_test.lst
 	* tests/Get_Opt_Test.cpp:

 	Added a new one-button test for ACE_Get_Opt that tests new long option
 	support and demonstrates its use.

Sat Dec 22 23:12:33 2001  Carlos O'Ryan  <coryan@uci.edu>

	* examples/Misc/Misc.dsw:
	* examples/Misc/test_XtReactor1.dsp:
	* examples/Misc/test_XtReactor2.dsp:
	* examples/Misc/test_dump.dsp:
	* examples/Misc/test_get_opt.dsp:
	* examples/Misc/test_profile_timer.dsp:
	* examples/Misc/test_read_buffer.dsp:
	* examples/Misc/test_set.dsp:
	* examples/Misc/test_sstring.dsp:
	* examples/Misc/test_trace.dsp:
	* examples/IPC_SAP/DEV_SAP/reader/reader.dsp:
	* examples/IPC_SAP/DEV_SAP/reader/reader.dsw:
	* examples/IPC_SAP/DEV_SAP/writer/writer.dsp:
	* examples/IPC_SAP/DEV_SAP/writer/writer.dsw: