@@ -1,3 +1,10 @@
+Mon Dec 24 08:08:40 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>
+
+	* ace/Log_Msg.cpp: Moved the call to ACE_Log_Msg_Manager::close()
+	  to first in the ACE_Log_Msg::close() method to avoid memory
+ 	  leaks.  Fixes BugId 1103.  Thanks to Ahmed Riza
+ 	  <Ahmed.Riza@ubsw.com> for reporting this.
+
 Sun Dec 23 23:02:17 2001  Carlos O'Ryan  <coryan@uci.edu>
 
 	* examples/QOS/Diffserv/Diffserv.dsw:
