@@ -1395,6 +1395,7 @@ Bob Jolliffe <bjolliffe@cs.up.ac.za>
 Jesse <jesse@thrownet.com>
 Robert Handl <Robert.Handl@era.ericsson.se>
 Keith Snively <ksnively@d-a-s.com>
+Ahmed Riza <Ahmed.Riza@ubsw.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
